[package]
name = "egui-ash"
version = "0.1.1"
authors = ["ORITO Itsuki <orito.itsuki@gmail.com>"]
description = "egui integration for ash (Vulkan)."
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/MatchaChoco010/egui-ash"
readme = "README.md"
documentation = "https://docs.rs/egui-ash"
repository = "https://github.com/MatchaChoco010/egui-ash"
categories = ["gui"]
keywords = ["gui", "egui", "ash", "vulkan", "winit"]
include = [
  "/LICENSE-*",
  "/src/*.rs",
  "/src/shaders/spv/*.spv",
  "/Cargo.toml",
]

[features]
default = ["egui-winit/default"]
gpu-allocator = [ "dep:gpu-allocator" ]
persistence = [
  "egui/persistence",
  "egui-winit/serde",
  "directories-next",
  "dep:serde",
  "ron",
]

## Underlying egui-winit features
accesskit = ["egui-winit/accesskit"]
android-game-activity = ["egui-winit/android-game-activity"]
android-native-activity = ["egui-winit/android-native-activity"]
bytemuck = ["egui-winit/bytemuck"]
clipboard = ["egui-winit/clipboard"]
links = ["egui-winit/links"]
puffin = ["egui-winit/puffin"]
serde = ["egui-winit/serde"]
wayland = ["egui-winit/wayland"]
x11 = ["egui-winit/x11"]

[dependencies]
anyhow = "1.0.75"
ash = { version = "0.37.3", default-features = false }
ash-window = "0.12.0"
bytemuck = "1.14.0"
directories-next = { version = "2.0.0", optional = true }
egui = "0.24.1"
egui-winit = "0.24.1"
gpu-allocator = { version = "0.24.0", default-features = false, features = ["vulkan"], optional = true }
log = "0.4.20"
raw-window-handle = "0.5"
ron = { version = "0.8.1", optional = true }
serde = { version = "1.0.193", optional = true }

[dev-dependencies]
ash = { version = "0.37.3", default-features = false, features = ["linked", "debug"] }
egui_extras = { version = "0.24.2", features = ["all_loaders"] }
egui-ash = { path = ".", features = ["gpu-allocator", "persistence"] }
egui_tiles = "0.4.0"
glam = "0.24.2"
image = { version = "0.24.7", default-features = false, features = ["png", "jpeg", "bmp"] }
log = "0.4.20"
tobj = "4.0.0"
